manifests/pgadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  selector:
    app: pgadmin
  ports:
  - port: 80
    targetPort: 80
