manifests/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgresdb
  ports:
  - port: 8080
    targetPort: 5432
