manifests/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  labels:
    app.kubernetes.io/name: pgadmin-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: pgadmin.krishomtrendstore.shop
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pgadmin-service
            port: 
              number: 80
